@@ -2,6 +2,8 @@ todoyu core changelog
 
 core 2.1.4 - not released yet
 	* Added: TodoyuCountry::getIsoNumCurrency()
+	* Changed: TodoyuFormElement::getStorageData() is final now and checks always for noStorage and disabled
+	* Added: TodoyuFormElement::getStorageDataInternal() to override storageData properly
 
 core 2.1.3 - 2011-11-17
 	* Bugfix: System URL was set wrong on windows systems
